# rust-happy

./: .gitignore  Cargo.toml  Dockerfile  README.md  cdk.json  package-lock.json  package.json
.history/: package_20210423134541.json
.history/lib/: dev-happy-stack_20210201154015.ts  dev-happy-stack_20210202100328.ts  dev-happy-stack_20210202100958.ts  dev-happy-stack_20210202101041.ts  dev-happy-stack_20210202101133.ts  dev-happy-stack_20210202101223.ts  dev-happy-stack_20210202101337.ts  dev-happy-stack_20210202101508.ts  dev-happy-stack_20210203125300.ts  dev-happy-stack_20210203130103.ts  dev-happy-stack_20210203143645.ts  dev-happy-stack_20210203164132.ts  dev-happy-stack_20210204100818.ts  dev-happy-stack_20210204104158.ts  dev-happy-stack_20210204104357.ts  dev-happy-stack_20210204105953.ts  dev-happy-stack_20210204145048.ts  dev-happy-stack_20210204145340.ts  dev-happy-stack_20210204145409.ts  dev-happy-stack_20210218151944.ts  dev-happy-stack_20210222125056.ts  dev-happy-stack_20210222125107.ts  dev-happy-stack_20210222125134.ts  dev-happy-stack_20210222125159.ts  dev-happy-stack_20210222131226.ts  dev-happy-stack_20210222131239.ts  dev-happy-stack_20210222131311.ts  dev-happy-stack_20210222131326.ts  dev-happy-stack_20210222131339.ts  dev-happy-stack_20210222131344.ts  dev-happy-stack_20210222134029.ts  dev-happy-stack_20210222134036.ts  rust-example-error_20210212145940.ts  rust-example-error_20210212150157.ts  rust-example-error_20210212150428.ts  rust-example-error_20210212151648.ts  rust-example-error_20210212151727.ts  rust-example-error_20210212151739.ts  rust-example-error_20210215120848.ts  rust-example-error_20210215121005.ts  (+77 more)
.history/test/: dev-happy.test_20210201154015.ts  dev-happy.test_20210423134545.ts
integration_tests/: Cargo.toml
integration_tests/tests/: lib.rs  rekognition.rs
lib/: rust-happy-stack.ts  rust-lambda-devoted-error.ts
rust_happy/: Cargo.toml
rust_happy/src/: lib.rs  rekognition.rs
rust_happy/src/rekognition/: main.rs
src/rekognition/: main.rs
