[package]
name = "rust_happy"
version = "0.1.0"
authors = ["happyspace <happyspace@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name="rekognition"
path="src/rekognition/main.rs"

[[bin]]
name="service"
path="src/service/main.rs"

[dependencies]
