[package]
name = "rust_happy"
version = "0.1.0"
authors = ["happyspace <happyspace@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name="rekognition"
path="src/rekognition/main.rs"

[[bin]]
name="service"
path="src/service/main.rs"

[dependencies]
tokio = { version = "1.0", features = ["macros", "io-util", "sync", "rt-multi-thread"] }
lambda_runtime = "^0.3.0"
serde = { version = "1", features = ["derive"] }
serde_json = "^1"
simple_logger = "1.6.0"
log = "^0.4"
simple-error = "0.2"

rusoto_core = {version = "0.46.0", default_features = false, features=["rustls"]}
rusoto_s3 = {version = "0.46.0", default_features = false, features=["rustls"]}
rusoto_sqs = {version = "0.46.0", default_features = false, features=["rustls"]}
rusoto_dynamodb = {version = "0.46.0", default_features = false, features=["rustls"]}

lazy_static = "1.4.0"